# OpenSandbox

./: README.md
.github/workflows/: publish-csharp-sdks.yml  publish-helm-chart.yml  publish-js-sdks.yml  release-generic.yml
cli/: README.md
cli/src/opensandbox_cli/: client.py
components/egress/docs/: mitmproxy-transparent.md
components/egress/mitmscripts/: system.py
components/egress/pkg/mitmproxy/: launch.go
components/execd/: bootstrap.sh  go.mod  go.sum
components/execd/pkg/flag/: flags.go  parser.go
components/execd/pkg/jupyter/auth/: client.go
components/execd/pkg/jupyter/execute/: execute.go
components/execd/pkg/runtime/: command_common.go  command_test.go  command_windows.go  ctrl.go  jupyter.go  jupyter_hooks_test.go  pty_session.go  pty_session_test.go  pty_session_windows.go  replay_buffer.go  replay_buffer_test.go
components/execd/pkg/web/: router.go
components/execd/pkg/web/controller/: basic.go  codeinterpreting.go  codeinterpreting_test.go  command.go  filesystem_upload.go  pty_controller.go  pty_ws.go  pty_ws_test.go  sse.go
components/execd/pkg/web/model/: error.go  pty.go  pty_ws.go
components/execd/tests/: smoke_api.py
docs/: README_zh.md  release-automation.md
docs/public/api/: spec-inline.js
examples/: README.md
examples/agent-sandbox/: README.md
examples/code-interpreter/: README.md
examples/host-volume-mount/: README.md  README_zh.md
examples/windows/: README.md  main.py  main_fix_net.py  main_use_pool.py  pool-win-example.yaml
kubernetes/: Makefile  README-ZH.md  README.md
kubernetes/apis/sandbox/v1alpha1/: pool_types.go  zz_generated.deepcopy.go
kubernetes/charts/opensandbox/: .gitignore  Chart.yaml  README.md  values.yaml
kubernetes/charts/opensandbox-controller/: Chart.yaml  README.md  values.yaml
kubernetes/charts/opensandbox-controller/templates/: deployment.yaml
kubernetes/charts/opensandbox-server/: values.yaml
kubernetes/charts/opensandbox-server/templates/: server.yaml
kubernetes/cmd/controller/: main.go
kubernetes/config/crd/bases/: sandbox.opensandbox.io_pools.yaml
kubernetes/config/samples/: sandbox_v1alpha1_pool.yaml  sandbox_v1alpha1_pool_restart.yaml
kubernetes/docs/: HELM-DEPLOYMENT.md
kubernetes/internal/controller/: batchsandbox_controller.go  batchsandbox_controller_test.go  pool_controller.go  pool_eviction_test.go  pool_update.go  pool_update_test.go  sandboxsnapshot_controller.go  sandboxsnapshot_lifecycle.go  suite_test.go
kubernetes/internal/task-executor/runtime/: process_test.go
kubernetes/internal/utils/: pod.go  pod_test.go
kubernetes/test/e2e/: e2e_test.go
kubernetes/test/e2e/testdata/: pool-with-update-strategy.yaml
oseps/: 0004-secure-container-runtime.md  0007-fast-sandbox-runtime-support.md
scripts/: python-k8s-e2e.sh
scripts/release/: create-release.sh
sdks/: Directory.Build.props  package.json  pnpm-lock.yaml
sdks/code-interpreter/csharp/src/OpenSandbox.CodeInterpreter/: OpenSandbox.CodeInterpreter.csproj
sdks/code-interpreter/javascript/: package.json
sdks/code-interpreter/python/: pyproject.toml
sdks/mcp/sandbox/python/: pyproject.toml
sdks/sandbox/csharp/: Directory.Build.props
sdks/sandbox/csharp/src/OpenSandbox/: OpenSandbox.csproj  Sandbox.cs
sdks/sandbox/csharp/src/OpenSandbox/Models/: Sandboxes.cs
sdks/sandbox/csharp/tests/OpenSandbox.Tests/: SandboxReadinessDiagnosticsTests.cs
sdks/sandbox/go/: README.md  config.go  constants.go  crypto_policy.go  egress.go  execd.go  go.mod  http.go  manager.go  opensandbox_test.go  retry_test.go  sandbox.go  sandbox_test.go
sdks/sandbox/go/opensandbox/: execd.go  integration_test.go  opensandbox_test.go  types.go
sdks/sandbox/javascript/: package.json
sdks/sandbox/javascript/src/api/: lifecycle.ts
sdks/sandbox/kotlin/: gradle.properties
sdks/sandbox/kotlin/sandbox/src/main/kotlin/com/alibaba/opensandbox/sandbox/: Sandbox.kt
sdks/sandbox/python/: pyproject.toml
sdks/sandbox/python/src/opensandbox/adapters/converter/: exception_converter.py
sdks/sandbox/python/src/opensandbox/api/lifecycle/models/: pvc.py
sdks/sandbox/python/src/opensandbox/models/: sandboxes.py
sdks/sandbox/python/tests/: test_converters_and_error_handling.py
server/: DEVELOPMENT.md  README.md  configuration.md  docker-compose.example.yaml  pyproject.toml
server/opensandbox_server/: cli.py  config.py  main.py
server/opensandbox_server/api/: lifecycle.py  pool.py  schema.py
server/opensandbox_server/examples/: example.config.k8s.toml  example.config.k8s.zh.toml  example.config.toml  example.config.zh.toml
server/opensandbox_server/services/: constants.py  docker.py
server/opensandbox_server/services/docker/: container_ops.py  docker_service.py
server/opensandbox_server/services/k8s/: agent_sandbox_provider.py  batchsandbox_provider.py  client.py  informer.py  kubernetes_service.py  label_selector.py  provider_common.py  windows_profile.py  workload_mapper.py  workload_provider.py
server/src/: config.py
server/src/api/: lifecycle.py
server/src/services/: docker.py  ossfs_mixin.py  runtime_resolver.py  sandbox_service.py
server/src/services/k8s/: agent_sandbox_provider.py  batchsandbox_provider.py  client.py  informer.py  kubernetes_service.py  provider_factory.py  rate_limiter.py  workload_provider.py
server/tests/: test_agent_sandbox_service.py  test_config.py  test_docker_service.py  test_routes_create_delete.py  test_routes_list_sandboxes.py  test_routes_proxy.py  test_schema.py
server/tests/k8s/: conftest.py  test_agent_sandbox_provider.py  test_batchsandbox_provider.py  test_egress_helper.py  test_informer.py  test_k8s_client.py  test_k8s_windows_profile.py  test_kubernetes_service.py  test_label_selector.py  test_provider_factory.py  test_rate_limiter.py  test_workload_mapper.py
server/tests/k8s/fixtures/: k8s_fixtures.py
specs/: sandbox-lifecycle.yml
tests/csharp/OpenSandbox.E2ETests/: CodeInterpreterE2ETests.cs  SandboxE2ETests.cs
tests/go/: e2e_test.go
tests/java/src/test/java/com/alibaba/opensandbox/e2e/: SandboxE2ETest.java
(+6 files in other folders)
